--- a/app/src/main/res/layout/mainactivity_3_messagelist.xml
+++ b/app/src/main/res/layout/mainactivity_3_messagelist.xml
@@ -4,12 +4,78 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/primary">
-        <Button
+        <ImageButton
+            android:id="@+id/myfriends"
             android:layout_height="30dp"
             android:layout_width="30dp"
+            android:src="@drawable/vector_drawable_bussiness_man"
+            android:background="@color/primary"
+            android:padding="0dp"
+            android:scaleType="fitXY"
             />
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="消息列表"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20sp"
+            android:textColor="@color/primary_text"/>
+
+
+    <ImageButton
+        android:id="@+id/addfriends"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="right"
+        android:background="@color/primary"
+        android:padding="0dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/vector_drawable_add"
+        android:layout_marginRight="5dp"/>
+
     </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:background="@color/primary">
+        <FrameLayout
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/message"
+                android:layout_height="30dp"
+                android:layout_width="30dp"
+                android:src="@drawable/vector_drawable_comments"
+                android:background="@color/primary"
+                android:padding="0dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/meeting"
+                android:layout_height="30dp"
+                android:layout_width="30dp"
+                android:src="@drawable/vector_drawable_meeting"
+                android:background="@color/primary"
+                android:padding="0dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                />
+        </FrameLayout>
+    </LinearLayout>
+
 </FrameLayout>
 
