--- a/app/src/main/res/layout/mainactivity_3_messagelist.xml
+++ b/app/src/main/res/layout/mainactivity_3_messagelist.xml
@@ -1,6 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -77,5 +78,5 @@
         </FrameLayout>
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
 
