--- a/app/src/main/res/layout/mainactivity_3_messagelist.xml
+++ b/app/src/main/res/layout/mainactivity_3_messagelist.xml
@@ -1,12 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/primary">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/primary"
+        android:fitsSystemWindows="true"
+        app:contentInsetLeft="0dp"
+        >
+
         <ImageButton
             android:id="@+id/myfriends"
             android:layout_height="30dp"
@@ -16,7 +21,7 @@
             android:padding="0dp"
             android:scaleType="fitXY"
             />
-        <TextView
+            <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="消息列表"
@@ -25,58 +30,91 @@
             android:textColor="@color/primary_text"/>
 
 
-    <ImageButton
-        android:id="@+id/addfriends"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="right"
-        android:background="@color/primary"
-        android:padding="0dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/vector_drawable_add"
-        android:layout_marginRight="5dp"/>
+            <ImageButton
+            android:id="@+id/addfriends"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:background="@color/primary"
+            android:padding="0dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/vector_drawable_add"
+            android:layout_marginRight="5dp"/>
 
     </android.support.v7.widget.Toolbar>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom"
-        android:background="@color/primary">
-        <FrameLayout
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <ImageButton
-                android:id="@+id/message"
-                android:layout_height="30dp"
-                android:layout_width="30dp"
-                android:src="@drawable/vector_drawable_comments"
-                android:background="@color/primary"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:layout_gravity="center"/>
-        </FrameLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        >
+        <com.ajguan.library.EasyRefreshLayout
+        android:id="@+id/easylayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <ImageButton
-                android:id="@+id/meeting"
-                android:layout_height="30dp"
-                android:layout_width="30dp"
-                android:src="@drawable/vector_drawable_meeting"
-                android:background="@color/primary"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:layout_gravity="center"
-                />
-        </FrameLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </com.ajguan.library.EasyRefreshLayout>
     </LinearLayout>
 
-</LinearLayout>
+    <!--<TabHost
+        android:id="@+id/tabhost"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:orientation="vertical">
+            <TabWidget
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"/>
+            <FrameLayout
+                android:id="@+id/tab_content"
+                android:layout_height="fill_parent"
+                android:layout_width="match_parent">
+
+            </FrameLayout >
+        </LinearLayout >
+    </TabHost >-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+            <FrameLayout android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/primary">
+                <ImageButton
+                    android:id="@+id/message"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:background="@color/primary"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/vector_drawable_comments"
+                    />
+            </FrameLayout>
+            <FrameLayout android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/primary">
+                <ImageButton
+                    android:id="@+id/meeting"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:background="@color/primary"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/vector_drawable_meeting"
+                    />
+            </FrameLayout>
+        </LinearLayout>
+    </LinearLayout>
 
