--- a/app/src/main/res/layout/view_rv_item.xml
+++ b/app/src/main/res/layout/view_rv_item.xml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="30dp">
-    <TextView
-        android:id="@+id/item_tv"
-        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
+    <com.stfalcon.multiimageview.MultiImageView
+        android:id="@+id/chat_item_portrait"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/vector_drawable_add"
+        />
+    <FrameLayout
         android:layout_height="match_parent"
-        android:gravity="center"
-        tools:text="item"/>
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_marginLeft="5dp">
+        <TextView
+            android:id="@+id/friend_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/primary_text"/>
+        <TextView
+            android:id="@+id/message_brief"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:textAppearance="?android:textAppearanceListItemSmall"
+
+            android:layout_marginBottom="3dp"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:textColor="@color/secondary_text"/>
+    </FrameLayout>
 </LinearLayout>
