--- a/app/src/main/res/layout/mainactivity_3_messagelist.xml
+++ b/app/src/main/res/layout/mainactivity_3_messagelist.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="48dp"
         android:background="@color/primary"
         android:fitsSystemWindows="true"
         app:contentInsetLeft="0dp"
@@ -20,6 +20,7 @@
             android:background="@color/primary"
             android:padding="0dp"
             android:scaleType="fitXY"
+            android:onClick="link_man"
             />
             <TextView
             android:layout_height="wrap_content"
@@ -43,12 +44,7 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:id="@+id/content">-->
+
         <com.ajguan.library.EasyRefreshLayout
                 android:id="@+id/easylayout"
                 android:layout_width="match_parent"
@@ -62,28 +58,14 @@
                 android:layout_weight="1"
                 android:scrollbars="vertical"/>
         </com.ajguan.library.EasyRefreshLayout>
-    <!--</LinearLayout>-->
 
-    <!--<TabHost
-        android:id="@+id/tabhost"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:orientation="vertical">
-            <TabWidget
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"/>
-            <FrameLayout
-                android:id="@+id/tab_content"
-                android:layout_height="fill_parent"
-                android:layout_width="match_parent">
 
-            </FrameLayout >
-        </LinearLayout >
-    </TabHost >-->
+        <View
+
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        android:layout_width="fill_parent"
+        android:layout_height="0.2dip"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -91,28 +73,29 @@
             <FrameLayout android:layout_height="match_parent"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:background="@color/primary">
+                >
                 <ImageButton
                     android:id="@+id/message"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="@color/primary"
+                    android:background="#ffffff"
                     android:padding="0dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/vector_drawable_comments"
+
                     />
             </FrameLayout>
             <FrameLayout android:layout_height="match_parent"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:background="@color/primary">
+                >
                 <ImageButton
                     android:id="@+id/meeting"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="@color/primary"
+                    android:background="#ffffff"
                     android:padding="0dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/vector_drawable_meeting"
