--- a/app/src/main/res/layout/mainactivity_3_messagelist.xml
+++ b/app/src/main/res/layout/mainactivity_3_messagelist.xml
@@ -79,7 +79,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="#ffffff"
+                    android:background="#00000000"
                     android:padding="0dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/vector_drawable_comments"
@@ -95,7 +95,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="#ffffff"
+                    android:background="#00000000"
                     android:padding="0dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/vector_drawable_meeting"
