--- a/app/src/main/res/layout/activity_02.xml
+++ b/app/src/main/res/layout/activity_02.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="activitytest.example.com.activitytest.LoginActivity">
+    tools:context="com.teamacd.demo.Activity_02">
 
     <!-- Login progress -->
     <ProgressBar
@@ -81,7 +81,7 @@
                 android:layout_marginTop="16dp"
                 android:text="同意协议"
                 android:textStyle="bold" />
-            
+
             <TextView
                 android:id="@+id/textxieyi"
                 android:layout_width="match_parent"
