--- a/app/src/main/res/layout/activity_02_2.xml
+++ b/app/src/main/res/layout/activity_02_2.xml
@@ -51,7 +51,7 @@
         android:text="取消"
         android:id="@+id/register_btn_cancel"
         android:textSize="20dp"
-        android:background="#f71818"
+        android:background="@color/accent"
         android:layout_below="@+id/register_btn_sure"
         android:layout_alignLeft="@+id/register_btn_sure"
         android:layout_alignStart="@+id/register_btn_sure"
@@ -74,7 +74,7 @@
         android:text="确定"
         android:id="@+id/register_btn_sure"
         android:textSize="20dp"
-        android:background="#1cf718"
+        android:background="@color/primary_light"
         android:layout_below="@+id/resetpwd_edit_pwd_new"
         android:layout_alignLeft="@+id/resetpwd_edit_pwd_new"
         android:layout_alignStart="@+id/resetpwd_edit_pwd_new"
