--- a/app/src/main/res/layout/activity_01.xml
+++ b/app/src/main/res/layout/activity_01.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+
     tools:context="com.hhu.acd.touching.Activity_01">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/primary"
+        android:fitsSystemWindows="true"
+        app:contentInsetLeft="0dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="帐号登录"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
         android:id="@+id/RL"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentStart="false"
+        android:layout_below="@id/toolbar">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="center"
+
             android:src="@drawable/touxiang"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp" />
@@ -64,7 +82,7 @@
             android:id="@+id/agree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="同意服务条款"
             android:layout_below="@+id/B_login"
             android:layout_alignStart="@id/B_login" />
@@ -75,6 +93,8 @@
             android:layout_height="20dp"
             android:text="新用户注册"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"/>
         <TextView
             android:id="@+id/textView2"
@@ -83,6 +103,8 @@
             android:text="忘记密码？"
             android:textSize="15dp"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
