--- a/app/src/main/res/layout/activity_01.xml
+++ b/app/src/main/res/layout/activity_01.xml
@@ -46,18 +46,19 @@
 
         <EditText
             android:id="@+id/account"
-            android:layout_width="280dp"
+            android:layout_width="200dp"
             android:layout_height="60dp"
             android:hint="账号"
             android:inputType="textPersonName"
             android:layout_weight="1"
             android:layout_below="@+id/image"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:maxLength="11"/>
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="280dp"
+            android:layout_width="200dp"
             android:layout_height="60dp"
             android:hint="密码"
             android:inputType="textPassword"
@@ -69,10 +70,10 @@
 
         <Button
             android:id="@+id/B_login"
-            android:layout_width="250dp"
+            android:layout_width="150dp"
             android:layout_height="50dp"
             android:text="登录"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/primary"
             android:textSize="20dp"
             android:layout_below="@+id/password"
             android:layout_marginTop="40dp"
@@ -95,7 +96,8 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="20dp"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/agree"/>
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -103,6 +105,7 @@
             android:text="忘记密码？"
             android:textSize="15dp"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/agree"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"/>
