--- a/app/src/main/res/layout/activity_02.xml
+++ b/app/src/main/res/layout/activity_02.xml
@@ -51,22 +51,25 @@
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="15dp">
 
                 <EditText
                     android:id="@+id/identity_code"
                     android:layout_marginTop="6dp"
-                    android:layout_width="0dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+
                     android:hint="输入验证码"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="numberPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLength="6"/>
 
                 <com.hhu.acd.touching.TimeButton
                     android:id="@+id/send_msg"
@@ -78,7 +81,16 @@
                     />
 
             </LinearLayout>
-
+            <Button
+                android:id="@+id/checkcode"
+                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="20dp"
+                android:text="确定"
+                android:background="@color/primary"
+                android:textColor="@color/primary_text"
+                android:textSize="20sp"/>
             <CheckBox
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
@@ -87,7 +99,8 @@
                 android:checked="true"
                 android:text="同意服务条款"
                 android:layout_below="@+id/B_login"
-                android:layout_alignStart="@id/B_login"/>
+                android:layout_alignStart="@id/B_login"
+                android:layout_gravity="center"/>
 
 
 
