--- a/app/src/main/res/layout/activity_02_2.xml
+++ b/app/src/main/res/layout/activity_02_2.xml
@@ -1,83 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:weightSum="1">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/primary"
+        android:fitsSystemWindows="true"
+        app:contentInsetLeft="0dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="帐号完善"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
     <EditText
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="50dp"
         android:drawableLeft="@android:drawable/ic_menu_myplaces"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/resetpwd_edit_name"
-        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
         android:hint="请输入您的用户名"
-        android:layout_alignLeft="@+id/resetpwd_edit_pwd_new"
-        android:layout_alignStart="@+id/resetpwd_edit_pwd_new"
-        android:layout_alignRight="@+id/resetpwd_edit_pwd_new"
-        android:layout_alignEnd="@+id/resetpwd_edit_pwd_new" />
+        />
 
-    <!--
-    <EditText android:id="@+id/edt_operator_name" style="@style/syncEditText"
-        android:hint="@string/hint_operator_name" />
-    <ImageView android:id="@+id/syncOperatorImg" style="@style/syncImageView"
-        android:layout_alignLeft="@+id/edt_operator_name"
-        android:layout_alignTop="@+id/edt_operator_name"
-        android:layout_alignBottom="@+id/edt_operator_name" android:src="@drawable/sync_operator" />
--->
+
 
     <EditText
         android:drawableLeft="@android:drawable/ic_lock_idle_lock"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/resetpwd_edit_pwd_old"
         android:hint="请输入您的密码"
-        android:layout_below="@+id/resetpwd_edit_name"
-        android:layout_alignRight="@+id/resetpwd_edit_name"
-        android:layout_alignEnd="@+id/resetpwd_edit_name"
-        android:layout_alignLeft="@+id/resetpwd_edit_name"
-        android:layout_alignStart="@+id/resetpwd_edit_name" />
+        android:layout_gravity="center"/>
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="取消"
-        android:id="@+id/register_btn_cancel"
-        android:textSize="20dp"
-        android:background="@color/accent"
-        android:layout_below="@+id/register_btn_sure"
-        android:layout_alignLeft="@+id/register_btn_sure"
-        android:layout_alignStart="@+id/register_btn_sure"
-        android:layout_marginTop="10dp" />
+
 
     <EditText
         android:drawableLeft="@android:drawable/ic_lock_idle_lock"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/resetpwd_edit_pwd_new"
         android:layout_below="@+id/resetpwd_edit_pwd_old"
         android:layout_centerHorizontal="true"
-        android:hint="请确认您的密码" />
+        android:hint="请确认您的密码"
+        android:layout_gravity="center"
+        />
+
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="确定"
         android:id="@+id/register_btn_sure"
         android:textSize="20dp"
         android:background="@color/primary_light"
-        android:layout_below="@+id/resetpwd_edit_pwd_new"
-        android:layout_alignLeft="@+id/resetpwd_edit_pwd_new"
-        android:layout_alignStart="@+id/resetpwd_edit_pwd_new"
-        android:layout_marginTop="20dp" />
 
-</RelativeLayout>
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp" />
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="取消"
+        android:id="@+id/register_btn_cancel"
+        android:textSize="20dp"
+        android:background="@color/accent"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp" />
+
+</LinearLayout>
