--- a/app/src/main/res/layout/activity_04.xml
+++ b/app/src/main/res/layout/activity_04.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -12,11 +13,11 @@
         app:contentInsetLeft="0dp"
         >
 
-        <ImageButton
+       <ImageButton
             android:id="@+id/mymeeting"
             android:layout_height="30dp"
             android:layout_width="30dp"
-            android:src="@drawable/vector_drawable_bussiness_man"
+            android:src="@drawable/vector_drawable__meeting_image_white"
             android:background="@color/primary"
             android:padding="0dp"
             android:scaleType="fitXY"
@@ -32,7 +33,7 @@
 
 
         <ImageButton
-            android:id="@+id/addfriends"
+            android:id="@+id/create_meeting"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
@@ -46,13 +47,13 @@
 
 
     <com.ajguan.library.EasyRefreshLayout
-        android:id="@+id/easylayout"
+        android:id="@+id/meeting_easylayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/my_recycler_view"
+            android:id="@+id/my_recycler_view_meetings"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
