--- a/app/src/main/res/layout/activity_04.xml
+++ b/app/src/main/res/layout/activity_04.xml
@@ -33,7 +33,7 @@
 
 
         <ImageButton
-            android:id="@+id/create_meeting"
+            android:id="@+id/create_meeting_pop"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
@@ -76,7 +76,7 @@
             android:layout_weight="1"
             >
             <ImageButton
-                android:id="@+id/message"
+                android:id="@+id/meetingtomessage"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
