--- a/app/src/main/res/layout/activity_01.xml
+++ b/app/src/main/res/layout/activity_01.xml
@@ -9,7 +9,7 @@
 
     tools:context="com.hhu.acd.touching.Activity_01">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar01"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/primary"
