--- a/app/src/main/res/layout/activity_02.xml
+++ b/app/src/main/res/layout/activity_02.xml
@@ -8,7 +8,7 @@
 
     tools:context="com.hhu.acd.touching.Activity_02">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar02"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/primary"
