--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
   <color name="secondary_text">#757575</color>
   <color name="icons">#FFFFFF</color>
   <color name="divider">#BDBDBD</color>
+  <color name="loading_backgroup">#2a80b9</color>
+  <color name="loading_color">#ffffff</color>
 </resources>
