--- a/app/src/main/res/layout/activity_07.xml
+++ b/app/src/main/res/layout/activity_07.xml
@@ -102,7 +102,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        xmlns:tools="http://schemas.android.com/tools">
         <android.support.design.widget.TabLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -119,31 +120,78 @@
             android:layout_below="@id/meeting_in_detail_tablayout">
 
         </android.support.v4.view.ViewPager>
-        <com.scalified.fab.ActionButton
-            android:id="@+id/float_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/fab_margin"
-            android:layout_marginBottom="@dimen/fab_margin"
+        <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            fab:fabs_menu_overlayColor="#4d000000"
+            fab:fabs_menu_clickableOverlay="true"
+            tools:layout_behavior="@string/fabs_menu_layout_behavior">
 
-            fab:button_color="@color/fab_material_lime_500"
-            fab:button_colorPressed="@color/fab_material_lime_900"
-            fab:image="@drawable/fab_plus_icon"
-            fab:image_size="24dp"
-            fab:shadow_color="#757575"
-            fab:shadow_radius="1.0dp"
-            fab:shadow_xOffset="0.5dp"
-            fab:shadow_yOffset="1.0dp"
-            fab:stroke_color="@color/fab_material_blue_grey_500"
-            fab:stroke_width="1.0dp"
-            fab:button_colorRipple="@color/fab_material_black"
-            fab:rippleEffect_enabled="false"
-            fab:shadowResponsiveEffect_enabled="true"
-            fab:show_animation="@anim/fab_roll_from_down"
-            fab:hide_animation="@anim/fab_roll_to_down"
-            />
+            <!-- FABs Menu is the main view. It will contain all the items FABs and it create the menu fab itself -->
+            <jahirfiquitiva.libs.fabsmenu.FABsMenu
+                android:id="@+id/fabs_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:clipChildren="false"
+                fab:fab_menuMargins="16dp"
+                fab:fab_moreButtonPlusIcon="@drawable/ic_plus"
+                fab:fab_moreButtonBackgroundColor="@color/pink"
+                fab:fab_moreButtonRippleColor="@color/pink_pressed"
+                fab:fab_moreButtonSize="normal"
+                fab:fab_labelsPosition="left"
+                fab:fab_expandDirection="up">
+
+                <!-- This is the item that appears at the top of the menu -->
+                <jahirfiquitiva.libs.fabsmenu.TitleFAB
+                    android:id="@+id/to_remove"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:srcCompat="@drawable/ic_share"
+                    fab:fabSize="mini"
+                    fab:backgroundTint="@color/colorAccent"
+                    fab:rippleColor="@color/colorAccent"
+                    fab:fab_title="This is a custom title"
+                    fab:fab_title_backgroundColor="@color/colorAccent"
+                    fab:fab_title_textColor="@android:color/white"/>
+
+                <jahirfiquitiva.libs.fabsmenu.TitleFAB
+                    android:id="@+id/clickable_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:srcCompat="@drawable/ic_pencil"
+                    fab:fab_title="Clickable title"
+                    fab:fab_enableTitleClick="true"
+                    fab:fab_title_textColor="@color/colorAccent"
+                    fab:fabSize="mini"
+                    fab:backgroundTint="@color/colorAccent"
+                    fab:rippleColor="@color/colorAccent"/>
+
+                <jahirfiquitiva.libs.fabsmenu.TitleFAB
+                    android:id="@+id/mini_fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:srcCompat="@drawable/ic_heart"
+                    fab:fab_title="Mini fab with long text"
+                    fab:fabSize="mini"
+                    fab:backgroundTint="@color/blue_semi"
+                    fab:rippleColor="@color/blue_semi_pressed"/>
+
+                <!-- This item will appear just above the menu FAB -->
+                <jahirfiquitiva.libs.fabsmenu.TitleFAB
+                    android:id="@+id/green_fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:srcCompat="@drawable/ic_person"
+                    fab:fab_title="Fab with even longer text that might not even fit in all the screens"
+                    fab:fabSize="normal"
+                    fab:backgroundTint="@color/green"
+                    fab:rippleColor="@color/green_pressed"/>
+
+            </jahirfiquitiva.libs.fabsmenu.FABsMenu>
+
+        </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>
+
     </RelativeLayout>
 
 
