--- a/app/src/main/res/layout/activity_09.xml
+++ b/app/src/main/res/layout/activity_09.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:amdorid="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#E3E3E3">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="@color/primary"
+            android:background="@color/colorPrimary"
             android:fitsSystemWindows="true"
             app:contentInsetLeft="0dp">
 
@@ -21,7 +22,7 @@
                 android:id="@+id/back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@color/primary"
+                android:background="@color/colorPrimary"
                 android:onClick="onClick"
                 android:padding="0dp"
                 android:scaleType="fitXY"
@@ -34,22 +35,34 @@
                 android:text="创建会议"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/finish"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:text="完成"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp"
+                android:background="@color/colorPrimary"/>
         </android.support.v7.widget.Toolbar>
 
 
 
         <LinearLayout
+            android:id="@+id/L1"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-
-            >
+            android:background="#FFFFFF"
+            android:layout_marginTop="10dp"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="会议封面:"
+                android:layout_marginLeft="25dp"
+                android:text="封面"
                 android:textSize="20dp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"/>
@@ -61,53 +74,72 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/L2"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF"
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="会议主题:"
+                android:layout_marginLeft="25dp"
+                android:text="主题:"
                 android:textSize="20dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:paddingTop="5dp"/>
 
             <EditText
                 android:id="@+id/meetingtheme"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="不超过10个字" />
+                android:hint="不超过10个字"
+                android:maxLength="10"
+                android:paddingTop="5dp"
+                android:layout_marginLeft="5dp"/>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="会议简介:"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
-
-        <EditText
-            android:id="@+id/meetingbrief"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:hint="不超过20字"
-            android:scrollbarSize="30dp"
-            android:visibility="visible" />
-
         <LinearLayout
+            android:id="@+id/L3"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
+                android:text="简介:"
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
+
+            <EditText
+                android:id="@+id/meetingbrief"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:paddingTop="5dp"
+                android:hint="不超过20字"
+                android:maxLength="20"
+                android:scrollbarSize="30dp"
+                android:visibility="visible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:background="#FFFFFF">
+
+            <TextView
+                android:id="@+id/r_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
                 android:text="注册开始时间:"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -125,19 +157,18 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5px"
-            android:layout_marginLeft="140dp"
             android:layout_marginTop="-10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black" />
+            android:background="@color/gray" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:text="注册截止时间:"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -156,19 +187,19 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5px"
-            android:layout_marginLeft="140dp"
             android:layout_marginTop="-10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black" />
+            android:background="@color/gray" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:text="会议开始时间:"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -186,19 +217,19 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5px"
-            android:layout_marginLeft="140dp"
             android:layout_marginTop="-10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black" />
+            android:background="@color/gray" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:text="会议结束时间:"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -215,23 +246,19 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1.5px"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="-10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
+                android:paddingTop="5dp"
                 android:text="活动地点:"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -240,74 +267,89 @@
                 android:id="@+id/meetingarea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                 />
+                android:paddingTop="5dp"/>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-
+            android:layout_height="35dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
             android:text="设置互动项目:"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textColor="@color/black"/>
+
+        <RelativeLayout
+            android:id="@+id/RL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
+            android:background="#FFFFFF">
 
             <CheckBox
                 android:id="@+id/signinfunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开签到功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginTop="2dp"
+                />
 
 
             <CheckBox
                 android:id="@+id/votefunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开投票功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_below="@+id/signinfunction"
+                android:layout_marginTop="2dp"
+                />
 
 
             <CheckBox
                 android:id="@+id/remarkfunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开评分功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp" />
+                android:layout_below="@+id/votefunction"
+                android:layout_marginTop="2dp"
+                />
 
 
             <CheckBox
                 android:id="@+id/notefunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开笔记功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_below="@+id/remarkfunction"
+                android:layout_marginTop="2dp"
+                />
 
 
             <CheckBox
                 android:id="@+id/bulletscreenfunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开弹幕功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_below="@id/notefunction"
+                android:layout_marginTop="2dp"
+                />
 
             <CheckBox
                 android:id="@+id/signoutfunction"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="打开签退功能"
                 android:textSize="15dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_below="@+id/bulletscreenfunction"
+                android:layout_marginTop="2dp"
+                />
 
-        <Button
-            android:id="@+id/finish"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            android:text="完成" />
+        </RelativeLayout>
+
     </LinearLayout>
 </ScrollView>
