--- a/app/src/main/res/layout/activity_11.xml
+++ b/app/src/main/res/layout/activity_11.xml
@@ -1,9 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hhu.acd.touching.Activity_11">
+    tools:context=".Activity_11">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        app:contentInsetStart="0dp">
+
+        <Button
+            android:id="@+id/B_before"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:drawableLeft="@drawable/vector_drawable_back"
+            android:background="@null"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/list"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="添加"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="63dp"
+        android:background="@drawable/ic_search_blue_grey_300_24dp" />
+
+    <EditText
+        android:id="@+id/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/toolbar"
+        android:hint="请输入账号"
+        android:inputType="number"
+        android:layout_toEndOf="@+id/button"/>
+
+    <Button
+        android:id="@+id/search_button"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="118dp"
+        android:background="@color/colorPrimary"
+        android:text="搜索"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
+
+</RelativeLayout>
