--- a/app/src/main/res/layout/activity_12_2.xml
+++ b/app/src/main/res/layout/activity_12_2.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_person_infor2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hhu.acd.touching.Activity_12_2">
     
     <android.support.v7.widget.Toolbar
@@ -18,19 +14,18 @@
         android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
-        <Button
+
+        <ImageButton
             android:id="@+id/B_before"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_navigate_before_white_24dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/vector_drawable_back"
             android:background="@null"
-            android:text="返回"
             android:textSize="20sp"
             android:textColor="#FFFFFF"
-
-
             android:gravity="center_vertical"
-            />
+            android:scaleType="fitXY"
+            android:padding="0dp"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -38,8 +33,7 @@
         android:id="@+id/RL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true">
+        android:layout_marginTop="50dp">
 
         <ImageView
             android:id="@+id/image"
@@ -100,7 +94,7 @@
             android:background="#3F51B5"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name"
-            android:layout_marginTop="100dp" />
+            android:layout_marginTop="85dp" />
 
         <Button
             android:id="@+id/B_addfriends"
@@ -111,7 +105,7 @@
             android:background="#3F51B5"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name"
-            android:layout_marginTop="100dp" />
+            android:layout_marginTop="85dp" />
 
     </RelativeLayout>
 
