--- a/app/src/main/res/layout/activity_15.xml
+++ b/app/src/main/res/layout/activity_15.xml
@@ -15,19 +15,20 @@
         android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
-        <Button
+
+        <ImageButton
             android:id="@+id/B_before"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_navigate_before_white_24dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/vector_drawable_back"
             android:background="@null"
-            android:text="返回"
             android:textSize="20sp"
             android:textColor="#FFFFFF"
-
-
             android:gravity="center_vertical"
-            />
+            android:scaleType="fitXY"
+            android:padding="0dp"/>
+
+
         <TextView
             android:id="@+id/list"
             android:layout_height="wrap_content"
