--- a/app/src/main/res/layout/activity_09.xml
+++ b/app/src/main/res/layout/activity_09.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/primary"
             android:fitsSystemWindows="true"
             app:contentInsetLeft="0dp">
 
@@ -24,7 +24,7 @@
                 android:id="@+id/back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@color/colorPrimary"
+                android:background="@color/primary"
                 android:onClick="onClick"
                 android:padding="0dp"
                 android:scaleType="fitXY"
@@ -46,7 +46,7 @@
                 android:text="完成"
                 android:textColor="#FFFFFF"
                 android:textSize="20dp"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/primary"/>
         </android.support.v7.widget.Toolbar>
 
         <LinearLayout
