--- a/app/src/main/res/layout/activity_11.xml
+++ b/app/src/main/res/layout/activity_11.xml
@@ -11,18 +11,19 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
 
         <ImageButton
-            android:id="@+id/mymeeting_back"
+            android:id="@+id/myfriends"
             android:layout_height="30dp"
             android:layout_width="30dp"
             android:src="@drawable/vector_drawable_back"
-            android:background="@color/colorPrimary"
+            android:background="@color/primary"
             android:padding="0dp"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:layout_marginLeft="16dp"/>
 
         <TextView
             android:id="@+id/list"
@@ -61,7 +62,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="118dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         android:text="搜索"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
