--- a/app/src/main/res/layout/activity_12.xml
+++ b/app/src/main/res/layout/activity_12.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
 
@@ -21,11 +21,10 @@
             android:layout_height="30dp"
             android:src="@drawable/vector_drawable_back"
             android:background="@null"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
             android:gravity="center_vertical"
             android:scaleType="fitXY"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:layout_marginLeft="16dp"/>
     </android.support.v7.widget.Toolbar>
     
     <RelativeLayout
@@ -86,7 +85,7 @@
             android:layout_height="40dp"
             android:text="编辑资料"
             android:textSize="20sp"
-            android:background="@color/colorPrimary"
+            android:background="@color/primary"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name"
             android:layout_marginTop="70dp"/>
