--- a/app/src/main/res/layout/activity_12_2.xml
+++ b/app/src/main/res/layout/activity_12_2.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
 
@@ -21,11 +21,9 @@
             android:layout_height="30dp"
             android:src="@drawable/vector_drawable_back"
             android:background="@null"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center_vertical"
             android:scaleType="fitXY"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:layout_marginLeft="16dp"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -90,7 +88,7 @@
             android:layout_height="wrap_content"
             android:text="删除好友"
             android:textSize="20dp"
-            android:background="#3F51B5"
+            android:background="@color/primary"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name"
             android:layout_marginTop="85dp" />
@@ -101,7 +99,7 @@
             android:layout_height="wrap_content"
             android:text="加为好友"
             android:textSize="20dp"
-            android:background="#3F51B5"
+            android:background="@color/primary"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name"
             android:layout_marginTop="85dp" />
