--- a/app/src/main/res/layout/activity_07.xml
+++ b/app/src/main/res/layout/activity_07.xml
@@ -59,7 +59,8 @@
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:id="@+id/meeting_portrait_07"/>
+            android:id="@+id/meeting_portrait_07"
+            android:src="@drawable/fengmian"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
