--- a/app/src/main/res/layout/activity_15.xml
+++ b/app/src/main/res/layout/activity_15.xml
@@ -31,7 +31,7 @@
             android:id="@+id/list"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="消息列表"
+            android:text="发布投票"
             android:layout_gravity="center_horizontal"
             android:textSize="20sp"
             android:textColor="#FFFFFF" />
