--- a/app/src/main/res/layout/fragment_meeting_brief_message_item.xml
+++ b/app/src/main/res/layout/fragment_meeting_brief_message_item.xml
@@ -9,7 +9,7 @@
         android:layout_margin="5dp"
         android:layout_alignParentLeft="true"
         android:id="@+id/meeting_image"
-        android:background="@color/primary"/>
+        android:background="@drawable/fengmian"/>
     <TextView
         android:id="@+id/meeting_name"
         android:layout_width="wrap_content"
