--- a/app/src/main/res/layout/view_meeting_brief_item.xml
+++ b/app/src/main/res/layout/view_meeting_brief_item.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:scaleType="centerCrop"
-
+        android:src="@drawable/fengmian"
 
         />
 
