--- a/app/src/main/res/layout/votation_item.xml
+++ b/app/src/main/res/layout/votation_item.xml
@@ -9,7 +9,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/ic_remove_circle_red_600_24dp"/>
     <EditText
         android:id="@+id/selection"
         android:layout_width="wrap_content"
